# quonitor

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  error.rs  main.rs  tray.rs
src-tauri/src/api/: commands.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs  schema.sql
src-tauri/src/providers/: anthropic.rs  github.rs  google.rs  mod.rs  openai.rs
src-tauri/src/services/: aggregator.rs  cache.rs  mod.rs  notifier.rs  scheduler.rs
src/components/: AccountManager.tsx  QuotaCard.tsx  SettingsPanel.tsx  TrendChart.tsx
src/hooks/: useQuotaData.ts
src/styles/: globals.css
